--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
 	},
 	"devDependencies": {
+		"@fontsource/dosis": "^5.0.18",
+		"@fontsource/pacifico": "^5.0.8",
 		"@sveltejs/adapter-auto": "^3.0.0",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
@@ -19,5 +21,10 @@
 		"typescript": "^5.0.0",
 		"vite": "^5.0.3"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"add-to-calendar-button": "^2.5.10",
+		"d3": "^7.8.5",
+		"svelte-modals": "^1.3.0"
+	}
 }
